<resources>
    <string name="AT_vvv">Verkehrsverbund Vorarlberg</string>
    <string name="AT_vvv_validity">"*FAIRTIQ-Tickets are valid within the whole Verkehrsverbund Vorarlberg and for the combi tariff with Liechtenstein (VVV-LIEmobil) with the following limitations:
 • FAIRTIQ-Tickets are only valid in 2nd class in ÖBB trains
 • FAIRTIQ-Tickets are not valid in combi tariff with Ostwind (VVV-OTV)"</string>
    <string name="AboutCompanyFifthParagraph">Are you a transportation company interested to find out if FAIRTIQ works in your area? We look forward to hearing from you at b2b@fairtiq.com.</string>
    <string name="AboutCompanyFirstParagraph">FAIRTIQ is an innovative, dynamic start-up striving to make traveling by public transport easier than ever before. In line with our vision \"the easiest way to everyday mobility, for everyone, everywhere\", we have been simplifying sustainable mobility together with transport companies since 2016.</string>
    <string name="AboutCompanyFourthParagraph">FAIRTIQ for transportation companies</string>
    <string name="AboutCompanySecondParagraph">Help us improve the app!</string>
    <string name="AboutCompanySeventhParagraph">If you would like to promote employee mobility or are looking for a business solution, please contact us at b2b@fairtiq.com.</string>
    <string name="AboutCompanySixthParagraph">FAIRTIQ for companies</string>
    <string name="AboutCompanyThirdParagraph">Do you have any questions, suggestions or ideas for improving the app? We would be delighted to hear from you at feedback@fairtiq.com.</string>
    <string name="AboutMenuCompanyTitle">About FAIRTIQ</string>
    <string name="AboutMenuGTCTitle">Terms and Conditions</string>
    <string name="AboutMenuPartnersTitle">Our partners</string>
    <string name="AboutMenuPrivacyPolicyTitle">Data Protection Declaration</string>
    <string name="AcceptingTermsError">Error accepting terms</string>
    <string name="AccessibilityPartnersScreenName">Our Partners</string>
    <string name="AccountManagementTitle">Permissions &amp; Account Management</string>
    <string name="AccountSettingCreditCard">Credit card</string>
    <string name="AccountSettingDailyReceiptSubitle">via email</string>
    <string name="AccountSettingDailyReceiptTitle">Receipt</string>
    <string name="AccountSettingDataProtectionRules">I have read and taken note of the data protection declaration</string>
    <string name="AccountSettingDateOfBirth">Date of birth</string>
    <string name="AccountSettingEmail">Email</string>
    <string name="AccountSettingEndingIn">ending in</string>
    <string name="AccountSettingFirstName">First name</string>
    <string name="AccountSettingGTCAccept">I agree to the general terms and conditions</string>
    <string name="AccountSettingLastName">Last name</string>
    <string name="AccountSettingNewsletterSubtitle">via email</string>
    <string name="AccountSettingNewsletterTitle">News about FAIRTIQ</string>
    <string name="AccountSettingPaymentMethod">Payment Method</string>
    <string name="AccountSettingRevokeConsent">Revoke my consent</string>
    <string name="AccountSettingSaveDialogMessage">Your changes will not be saved.</string>
    <string name="AccountSettingSaveDialogTitle">Do you want to continue?</string>
    <string name="AccountSettingsCloseToReachBonusTitle">Notify me when I am close to getting a bonus</string>
    <string name="AccountSettingsCloseToReachBonusTitleLink">getting a bonus</string>
    <string name="AccountSettingsDeleteAccountTitle">Delete account</string>
    <string name="AccountSettingsEmailUsageInformationFullText">Your email will be used for receiving payment receipts, FAIRTIQ offers and relevant communication. You can always unsubscribe for free via the email footer or by email to %s.</string>
    <string name="AccountSettingsEmailUsageInformationRecipientAddress">hello@fairtiq.com</string>
    <string name="AccountSettingsHalfFareAgeInfoText">Your age is automatically taken into account when calculating the price of your ticket. In case of a control, you might be asked to show an official document mentioning your age.</string>
    <string name="AccountSettingsRewardedBonusTitle">Notify me when I get a bonus</string>
    <string name="AccountSettingsRewardedBonusTitleLink">get a bonus</string>
    <string name="AccountSettingsRightOfWithdrawalWaiverTitle">I agree to waive my right of withdrawal</string>
    <string name="AccountSettingsRightOfWithdrawalWaiverTitleHighlight">right of withdrawal</string>
    <string name="AccountSettingsTabTitle">Account</string>
    <string name="AccountSettingsWaiveRightOfWithdrawalAccessibilityHint">Waive your right of withdrawal</string>
    <string name="ActivatePaymentProfileButtonAccessibilityHint">Activate to set as active.</string>
    <string name="ActivePaymentProfileButtonCompatibilityWarning">Add an accepted payment method in this region or select a different profile</string>
    <string name="ActivePaymentProfileSectionFooter">Important: You will receive a separate receipt per payment profile.</string>
    <string name="ActivePaymentProfileSectionLabel">Active Payment Profile</string>
    <string name="ActivePromotionDeferredLeaveStatus">You have already left the promotion.</string>
    <string name="ActivePromotionLeaveButtonTitle">Leave the promotion</string>
    <string name="ActivePromotionsTitle">Active promotions</string>
    <string name="ActivePromotionsUnlimited">Unlimited validity</string>
    <string name="AddCompanionAccessibilityLabel">Add companion</string>
    <string name="AddHalfFareCardAlertTitle">Half-Fare travelcard</string>
    <string name="AddHalfFareCardConfirmAction">Add</string>
    <string name="AddHalfFareCardMessage">Add the Half Fare Travelcard?</string>
    <string name="AddHalfFareCardTicketSettingsAlertParagraph">Do you have a Half-fare travel card? If so, please add it now to ensure you get a reduced fare.</string>
    <string name="AddPaymentMethodTitle">Add a payment method</string>
    <string name="AdditionalChargesSectionTitle">Additional charges</string>
    <string name="BackgroundRestrictionMessage">This app has been switched to Background Restriction mode. We recommend turning it off to allow us to compute your journey correctly.</string>
    <string name="BackgroundRestrictionTitle">Troubleshooting</string>
    <string name="BannerHeadingTitle">Get the best FAIRTIQ experience</string>
    <string name="BatterySaverMainMessage">This function, though useful, prevents FAIRTIQ from working properly.</string>
    <string name="BatterySaverMessage">Please disable the battery saver.</string>
    <string name="BatterySaverTitle">You are using a battery saver.</string>
    <string name="BillingAccountInsolvent">Please check your payment methods to be able to travel again.</string>
    <string name="BlockedUserError">This account is blocked.</string>
    <string name="Bonus">Travel 5 days and get a credit of %d.</string>
    <string name="BonusDescription">By travelling with FAIRTIQ on at least 5 days during a calendar month you become eligible to be credited 5% of the ticket price charged for these journeys.</string>
    <string name="BonusHowDescription">"The credit is valid one month and is automatically applied to your next invoice after being issued.
You will only be credited for journeys made within one of the participating communities listed below:"</string>
    <string name="BonusHowHeader">Where and how does it apply?</string>
    <string name="BonusNotificationBonusReached">Notify me when I get a bonus</string>
    <string name="BonusNotificationCloseToBonus">Notify me when I am close to getting a bonus</string>
    <string name="ChangeActivePaymentProfileErrorActiveTracker">The active payment profile cannot be changed as long as a journey is ongoing.</string>
    <string name="ChangeStationButtonAccessibilityHint">Activate to change start station.</string>
    <string name="CheckInActionTitle">Start journey</string>
    <string name="CheckInAddNewMethodLabel">Add new method</string>
    <string name="CheckInChangeTravelRegion">Change travel region</string>
    <string name="CheckInErrorAccountSettingsRecoveryAction">Go to Settings</string>
    <string name="CheckInErrorActiveProfileUnavailableInRegionAllowChangeSubtitle">"Don't worry. You can continue travelling by either choosing another profile, adding a new payment method or changing your travel region."</string>
    <string name="CheckInErrorActiveProfileUnavailableInRegionSubtitle">"Don't worry. You can continue travelling by either choosing another profile or adding a new payment method."</string>
    <string name="CheckInErrorActiveProfileUnavailableInRegionTitle">Oh no! This profile is unavailable in this region</string>
    <string name="CheckInErrorCommunityMismatchSubtitle">Further information is needed in order to travel in this region</string>
    <string name="CheckInErrorCommunityMismatchTitle">Complete your settings</string>
    <string name="CheckInErrorConnectivityLabel">Failed to connect to FAIRTIQ</string>
    <string name="CheckInErrorConnectivitySubtitle">Please check your network settings.</string>
    <string name="CheckInErrorConnectivityTitle">Network issue</string>
    <string name="CheckInErrorDeviceSettingsRecoveryAction">Go to Settings</string>
    <string name="CheckInErrorEmptyActivePaymentProfileSubtitle">"Don't worry. You can continue travelling by adding a new one or choosing another profile."</string>
    <string name="GenericOK">OK</string>
    <string name="HalfFareCardTitle">Half-Fare travelcard</string>
    <string name="MenuItemAbout">About FAIRTIQ</string>
    <string name="MenuItemContactKey">Contact</string>
    <string name="MenuItemFreeRidesKey">Invite Friends</string>
    <string name="MenuItemHelpCenterKey">Help</string>
    <string name="MenuItemHistory">History</string>
    <string name="MenuItemHowItWorksKey">How it works</string>
    <string name="MenuItemInformationKey">Information</string>
    <string name="MenuItemPaymentKey">Payment</string>
    <string name="MenuItemPromotionsKey">Promotions</string>
    <string name="MenuItemSettingsKey">Settings</string>
    <string name="MenuItemTravelCompanions">Companions</string>
    <string name="PricingSubtitle">FAIRTIQ uses your location data to determine your journey and buy the appropriate ticket.</string>
    <string name="PricingTitle">Pricing</string>
    <string name="StartingAJourneySubtitle">Slide the toggle button from left to right before boarding.</string>
    <string name="StartingAJourneyTitle">Starting a journey</string>
    <string name="StoppingAJourneySubtitle">Slide the toggle button from right to left after leaving the vehicle at your final destination.</string>
    <string name="Stopping_a_journey">Stopping a journey</string>
    <string name="SwissPassDisplayName">SwissPass</string>
    <string name="TicketInspectionSubtitle">Tap the ticket symbol to display your ticket to the conductor.</string>
    <string name="TicketInspectionTitle">Ticket inspection</string>
    <string name="TicketSettingsAddPass">Add existing pass/card</string>
    <string name="TicketSettingsPassCards">Passes and cards</string>
    <string name="TicketSettingsVVVCard">Year Pass</string>
    <string name="TicketSetupSubtitle">Before starting a journey, make sure you select the desired ticket settings.</string>
    <string name="TicketSetupTitle">Ticket settings</string>
    <string name="request_list_empty_start_conversation">START A CONVERSATION</string>
    <string name="request_list_empty_text">Conversations started from this app will be visible here.</string>
    <string name="view_article_vote_prompt">Was this article helpful?</string>
    <string name="zs_general_referrer_logo_label_accessibility">Zendesk</string>
    <string name="zs_view_article_vote_no_accessibility">No vote</string>
    <string name="zs_view_article_vote_yes_accessibility">Yes vote</string>
</resources>