<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@id/request_list_swipe_refresh_layout_empty" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <androidx.legacy.widget.Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <include layout="@layout/zs_activity_request_list_empty_logo" />
        <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/request_list_description_empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="64.0dip" android:layout_marginRight="64.0dip" android:text="@string/request_list_empty_text" android:layout_marginStart="64.0dip" android:layout_marginEnd="64.0dip" />
        <Button android:id="@id/request_list_empty_start_conversation" android:paddingLeft="16.0dip" android:paddingTop="10.0dip" android:paddingRight="16.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/request_list_empty_start_conversation" style="@style/ZendeskRequestListButton" />
        <androidx.legacy.widget.Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <ImageView android:layout_gravity="bottom|center" android:id="@id/request_list_zendesk_logo_empty" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:contentDescription="@string/zs_general_referrer_logo_label_accessibility" app:srcCompat="@drawable/zs_zendesk_product_logo" />
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>