<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/grayscale_100" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center" android:id="@id/battery" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="15.0dip" android:src="@drawable/battery_saver" android:contentDescription="@null" />
    <TextView android:textSize="18.0sp" android:textColor="@color/grayscale_020" android:gravity="center" android:layout_gravity="center" android:id="@id/saveBatteryModeAlertTitle" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="20.0dip" android:text="@string/BatterySaverTitle" android:fontFamily="@font/lato_bold" />
    <View android:background="@color/grey_1" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@color/secondary_broken_white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@color/grayscale_020" android:gravity="center" android:layout_gravity="center" android:id="@id/message" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="20.0dip" android:text="@string/BatterySaverMainMessage" android:fontFamily="@font/lato_regular" />
        <TextView android:textSize="16.0sp" android:textColor="@color/grayscale_020" android:gravity="center" android:layout_gravity="center" android:id="@id/actionMessage" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="20.0dip" android:text="@string/BatterySaverMessage" android:fontFamily="@font/lato_bold" />
    </LinearLayout>
    <View android:background="@color/grey_1" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@color/grayscale_100" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
        <Button android:textSize="16.0sp" android:textColor="@color/grayscale_100" android:layout_gravity="center" android:id="@id/buttonOk" android:background="@drawable/btn_primary_rounded" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_margin="20.0dip" android:text="@string/GenericOK" android:layout_weight="0.5" android:textAllCaps="true" android:fontFamily="@font/lato_bold" />
    </LinearLayout>
</LinearLayout>